tests/baselines/reference/computedPropertyNames18_ES5(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
computedPropertyNames18_ES5.ts(3,10): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== computedPropertyNames18_ES5.ts (1 errors) ====
    function foo() {
        var obj = {
            [this.bar]: 0
             ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        }
    }